--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "type": "commonjs",
   "devDependencies": {
     "@playwright/test": "^1.57.0",
-    "@types/node": "^25.0.1"
+    "@types/node": "^25.0.1",
+    "allure-playwright": "^3.4.5"
   }
 }
-
